--- a/test-api/pyproject.toml
+++ b/test-api/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "boto3>=1.42.19",
     "dotenv>=0.9.9",
-    "fastapi>=0.128.0",
+    "fastapi[standard]>=0.128.0",
     "pydantic>=2.12.5",
     "uvicorn>=0.40.0",
     "websockets>=15.0.1",
