--- a/test-api/pyproject.toml
+++ b/test-api/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "dotenv>=0.9.9",
     "fastapi[standard]>=0.128.0",
     "pydantic>=2.12.5",
+    "runpod>=1.8.1",
     "uvicorn>=0.40.0",
     "websockets>=15.0.1",
 ]
