--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-  "editor.defaultFormatter": "KevinRose.vsc-python-indent"
+  "editor.defaultFormatter": "KevinRose.vsc-python-indent",
+  "[json]": {
+    "editor.defaultFormatter": "vscode.json-language-features"
+  },
 }
